--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>My test page</title>
+        <link href="styles.css" rel="stylesheet">
     </head>
     <body>
         <img src="https://blog.mozilla.org/opendesign/files/2018/07/firefox-logo-300x310.png" alt="Test descriptive text">
