--- a/index.html
+++ b/index.html
@@ -14,12 +14,19 @@
         <h3>Heading 3</h3>
         <p>What I like to eat:
         <ul>
-            <li>apples</li>
+            <li class="testclass">apples</li>
             <li> bananas</li>
         </ul></p>
+
+        <p class="testclass">
+            I am the swag master
+        </p>
         <h4>Heading 4</h4>
         <h5>Heading 5</h5>
         <h6>Heading 6</h6>
+
+        <button>Change name</button>
         
     </body>
+    <script src="scripts/main.js"></script>
 </html>
